yaml/ingress-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-tls-test
  namespace: ${INGRESS_TEST_NAMESPACE}
  labels:
    app: ingress-tls-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-tls-test
  template:
    metadata:
      labels:
        app: ingress-tls-test
    spec:
      containers:
      - name: httpd
        image: registry.access.redhat.com/ubi9/httpd-24:latest
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "32Mi"
            cpu: "25m"
          limits:
            memory: "64Mi"
            cpu: "100m"
