yaml/ingress-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tls-test
  namespace: ${INGRESS_TEST_NAMESPACE}
  labels:
    app: ingress-tls-test
spec:
  tls:
  - hosts:
    - ${INGRESS_TEST_HOSTNAME}
    secretName: ingress-tls-test-cert
  rules:
  - host: ${INGRESS_TEST_HOSTNAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-tls-test
            port:
              number: 8080
